*Implementing part of bottom nav
-Implemented 4 xml files for the fragments
-Added colors

--- a/TbdModule/src/main/res/values/colors.xml
+++ b/TbdModule/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#EA0606</color>
+    <color name="colorPrimaryDark">#3C44D8</color>
+    <color name="colorAccent">#A20BF3</color>
+    <color name="blue">#535BEA</color>
+    <color name="yellow">#DFDB07</color>
+    <color name="green">#20EC09</color>
 </resources>
