*Implementing part of bottom nav
-Implemented the Java files for the fragments
-Implemented the fragments into main activity
-Now have a working bottom nav as a base

--- a/TbdModule/src/main/res/layout/activity_main.xml
+++ b/TbdModule/src/main/res/layout/activity_main.xml
@@ -8,17 +8,17 @@
     tools:context=".MainActivity">
 
     <FrameLayout
-        android:id="@+id/mathewFlFragment"
+        android:id="@+id/tbdFlFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/mathewBottomNavigationView"
+        app:layout_constraintBottom_toTopOf="@+id/tbdBottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/mathewBottomNavigationView"
+        android:id="@+id/tbdBottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="75dp"
         app:layout_constraintBottom_toBottomOf="parent"
