--- a/TbdModule/src/main/res/layout/fragment_settings.xml
+++ b/TbdModule/src/main/res/layout/fragment_settings.xml
@@ -9,7 +9,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/mathewTextView"
+        android:id="@+id/tbdTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="112dp"
