--- a/TbdModule/src/main/res/layout/fragment_second.xml
+++ b/TbdModule/src/main/res/layout/fragment_second.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green"
+    android:background="@color/yellow"
     tools:context=".MainActivity">
 
     <TextView
@@ -15,11 +15,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="112dp"
         android:layout_marginTop="68dp"
-        android:text="Third Thing"
+        android:text="@string/second_thing"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/blue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
