--- a/TbdModule/src/main/res/values/themes.xml
+++ b/TbdModule/src/main/res/values/themes.xml
@@ -5,5 +5,13 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+    <style name="SplashTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_background</item>
+        <item name="colorPrimary">@color/lavender</item>
+        <item name="colorPrimaryDark">@color/teal_200</item>
+        <item name="colorAccent">@color/white</item>
+        <item name="android:statusBarColor">@color/baige</item>
+    </style>
+
     <style name="Theme.SmartLibraryStudyRoomManagementAndComfortSystem" parent="Base.Theme.SmartLibraryStudyRoomManagementAndComfortSystem" />
 </resources>
