-Added group member information to string.xml files as comments. -Added group member information to fragment.xml files as comments. -Added group member information to main java file as comments. -Made updates/correction to group names and sections

--- a/TbdModule/src/main/res/layout/activity_main.xml
+++ b/TbdModule/src/main/res/layout/activity_main.xml
@@ -3,8 +3,9 @@
 Mathew Anderson-Saavedra n01436706
 Nicole Chlea Manaoat N01565017
 Medi Muamba Nzambi N01320883
-Safah Virk N01596470
 Section RCA
+Safah Virk N01596470
+Section RCB
 -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
