I did a lot -Implemented ImageButtons on each of the building Fragments -Will ask for a code on 1 of the image buttons -When entered, will bring on a different fragment container containing the room settings

--- a/TbdModule/src/main/res/layout/activity_main.xml
+++ b/TbdModule/src/main/res/layout/activity_main.xml
@@ -30,14 +30,6 @@ Section RCB
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:menu="@menu/bottom_nav_menu"/>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/tbdBottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        app:menu="@menu/bottom_nav_menu"
-        android:visibility="gone"/>
+        app:menu="@menu/drawer_menu"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
