--- a/TbdModule/src/main/res/menu/bottom_nav_menu.xml
+++ b/TbdModule/src/main/res/menu/bottom_nav_menu.xml
@@ -2,19 +2,19 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/tbdHome"
-        android:title="@string/test1"
+        android:id="@+id/action_temperature"
+        android:title="Temperature"
         android:icon="@drawable/home"/>
     <item
-        android:id="@+id/tbdSecond"
-        android:title="@string/test2"
+        android:id="@+id/action_lighting"
+        android:title="Lighting"
         android:icon="@drawable/me"/>
     <item
-        android:id="@+id/tbdThird"
-        android:title="@string/test3"
+        android:id="@+id/action_time"
+        android:title="Time"
         android:icon="@drawable/person"/>
     <item
-        android:id="@+id/tbdFourth"
-        android:title="@string/test4"
+        android:id="@+id/action_idk"
+        android:title="idk"
         android:icon="@drawable/settings"/>
 </menu>
