--- a/TbdModule/src/main/res/layout/fragment_room_settings.xml
+++ b/TbdModule/src/main/res/layout/fragment_room_settings.xml
@@ -4,13 +4,21 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- Placeholder fragment container -->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+
     <FrameLayout
         android:id="@+id/roomSettingsFragmentContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <!-- BottomNavigationView for room settings -->
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/roomSettingsBottomNav"
         android:layout_width="match_parent"
