--- a/TbdModule/src/main/res/menu/drawer_menu.xml
+++ b/TbdModule/src/main/res/menu/drawer_menu.xml
@@ -3,17 +3,17 @@
     <item
         android:id="@+id/nav_home"
         android:title="Building A"
-        android:icon="@drawable/home"/>
+        android:icon="@drawable/abuilding"/>
     <item
         android:id="@+id/nav_second"
         android:title="Building B"
-        android:icon="@drawable/home"/>
+        android:icon="@drawable/bbuilding"/>
     <item
         android:id="@+id/nav_third"
         android:title="Building C"
-        android:icon="@drawable/home"/>
+        android:icon="@drawable/cbuilding"/>
     <item
         android:id="@+id/nav_fourth"
         android:title="Building D"
-        android:icon="@drawable/home"/>
+        android:icon="@drawable/dbuilding"/>
 </menu>
