--- a/TbdModule/src/main/res/layout/fragment_third.xml
+++ b/TbdModule/src/main/res/layout/fragment_third.xml
@@ -13,20 +13,20 @@ Section RCB
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/green"
+    android:background="@color/baige"
     tools:context=".MainActivity">
 
     <ImageButton
         android:id="@+id/room1"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="124dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginEnd="98dp"
         android:layout_marginBottom="507dp"
         android:clickable="false"
         android:contentDescription="Room 1"
-        android:src="@drawable/person"
+        android:src="@drawable/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/room2"
@@ -41,7 +41,7 @@ Section RCB
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="507dp"
         android:contentDescription="Room 2"
-        android:src="@drawable/settings"
+        android:src="@drawable/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/room1"
         app:layout_constraintStart_toStartOf="parent"
