--- a/TbdModule/src/main/res/layout/fragment_fourth.xml
+++ b/TbdModule/src/main/res/layout/fragment_fourth.xml
@@ -13,6 +13,7 @@ Section RCB
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F1B3C7"
     tools:context=".MainActivity">
 
     <ImageButton
@@ -45,5 +46,36 @@ Section RCB
         app:layout_constraintEnd_toStartOf="@+id/room1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/room3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginBottom="331dp"
+        android:clickable="false"
+        android:contentDescription="Room 3"
+        android:src="@drawable/red"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/room4"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="107dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="55dp"
+        android:layout_marginBottom="331dp"
+        android:contentDescription="Room 4"
+        android:src="@drawable/green"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
