Put text on each building

--- a/TbdModule/src/main/res/layout/fragment_second.xml
+++ b/TbdModule/src/main/res/layout/fragment_second.xml
@@ -78,6 +78,22 @@ Section RCB
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
+    <TextView
+        android:id="@+id/textBuildingB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="157dp"
+        android:layout_marginBottom="668dp"
+        android:text="BUILDING B"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
