Fix all hardcoding and update of translating english to french.

--- a/TbdModule/src/main/res/layout/fragment_fourth.xml
+++ b/TbdModule/src/main/res/layout/fragment_fourth.xml
@@ -25,7 +25,7 @@ Section RCB
         android:layout_marginEnd="98dp"
         android:layout_marginBottom="507dp"
         android:clickable="false"
-        android:contentDescription="Room 1"
+        android:contentDescription="@string/room_1d"
         android:src="@drawable/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@ Section RCB
         android:layout_marginTop="124dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="507dp"
-        android:contentDescription="Room 2"
+        android:contentDescription="@string/room_2d"
         android:src="@drawable/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/room1"
@@ -55,7 +55,7 @@ Section RCB
         android:layout_marginTop="300dp"
         android:layout_marginBottom="331dp"
         android:clickable="false"
-        android:contentDescription="Room 3"
+        android:contentDescription="@string/room_3d"
         android:src="@drawable/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@ Section RCB
         android:layout_marginTop="300dp"
         android:layout_marginEnd="55dp"
         android:layout_marginBottom="331dp"
-        android:contentDescription="Room 4"
+        android:contentDescription="@string/room_4d"
         android:src="@drawable/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +86,7 @@ Section RCB
         android:layout_marginTop="44dp"
         android:layout_marginEnd="157dp"
         android:layout_marginBottom="668dp"
-        android:text="BUILDING D"
+        android:text="@string/building_d"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
