--- a/TbdModule/src/main/res/layout/fragment_third.xml
+++ b/TbdModule/src/main/res/layout/fragment_third.xml
@@ -24,7 +24,7 @@ Section RCB
         android:layout_marginEnd="98dp"
         android:layout_marginBottom="507dp"
         android:clickable="false"
-        android:contentDescription="Room 1"
+        android:contentDescription="@string/room_1c"
         android:src="@drawable/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@ Section RCB
         android:layout_marginTop="124dp"
         android:layout_marginEnd="48dp"
         android:layout_marginBottom="507dp"
-        android:contentDescription="Room 2"
+        android:contentDescription="@string/room_2c"
         android:src="@drawable/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/room1"
@@ -54,7 +54,7 @@ Section RCB
         android:layout_marginTop="300dp"
         android:layout_marginBottom="331dp"
         android:clickable="false"
-        android:contentDescription="Room 3"
+        android:contentDescription="@string/room_3c"
         android:src="@drawable/red"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@ Section RCB
         android:layout_marginTop="300dp"
         android:layout_marginEnd="55dp"
         android:layout_marginBottom="331dp"
-        android:contentDescription="Room 4"
+        android:contentDescription="@string/room_4c"
         android:src="@drawable/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +85,7 @@ Section RCB
         android:layout_marginTop="44dp"
         android:layout_marginEnd="157dp"
         android:layout_marginBottom="668dp"
-        android:text="BUILDING C"
+        android:text="@string/building_c"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
