--- a/TbdModule/src/main/res/layout/fragment_time.xml
+++ b/TbdModule/src/main/res/layout/fragment_time.xml
@@ -17,6 +17,6 @@ Section RCB
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="TIME" />
+        android:text="@string/time" />
 
 </FrameLayout>
