--- a/TbdModule/src/main/res/menu/menu_item.xml
+++ b/TbdModule/src/main/res/menu/menu_item.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         android:title=""
         android:icon="@drawable/tbd_menu">
+<menu>
 
-        <menu>
             <item
                 android:id="@+id/settings"
                 android:title="@string/settings"
                 app:showAsAction="never"
-                android:icon="@drawable/tbd_menusettings"/>
+                android:icon="@drawable/tbd_settings"/>
 
             <item
                 android:id="@+id/info"
@@ -32,9 +32,7 @@
                 app:showAsAction="never"
                 android:icon="@drawable/tbd_exit"
                 />
-
-
-        </menu>
+</menu>
     </item>
 
 </menu>
