--- a/TbdModule/src/main/res/layout/fragment_temperature.xml
+++ b/TbdModule/src/main/res/layout/fragment_temperature.xml
@@ -13,10 +13,32 @@ Section RCB
     android:layout_height="match_parent"
     tools:context=".TemperatureFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/temperature"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/air_quality"
+        android:layout_marginTop="75dp" />
+
+    <SeekBar
+        android:id="@+id/seekbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/temperature" />
+        android:layout_height="wrap_content"
+        android:max="100"
+        android:progress="50"
+        android:layout_marginTop="50dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/room_101a"
+        android:layout_marginTop="0dp"/>
+
 
 </FrameLayout>
