--- a/TbdModule/src/main/res/layout/fragment_idk.xml
+++ b/TbdModule/src/main/res/layout/fragment_idk.xml
@@ -13,10 +13,30 @@ Section RCB
     android:layout_height="match_parent"
     tools:context=".IdkFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/idk" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/room_101a"
+        android:layout_marginTop="0dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/idk"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/how_many_people_in_the_room"
+        android:layout_marginTop="40dp"/>
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switch2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/open_or_close_door"
+        android:layout_marginTop="60dp"/>
 
 </FrameLayout>
