--- a/TbdModule/src/main/res/layout/activity_splash.xml
+++ b/TbdModule/src/main/res/layout/activity_splash.xml
@@ -6,6 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/ic_launcher_playstore_edited"
-    tools:context=".SplashActivity">
+    tools:context=".TbdSplashActivity">
 
 </RelativeLayout>
