--- a/TbdModule/src/main/res/menu/menu_item.xml
+++ b/TbdModule/src/main/res/menu/menu_item.xml
@@ -4,8 +4,8 @@
 
     <item
         app:showAsAction="always"
-        android:title=""
-        android:icon="@drawable/tbd_menu">
+        android:title="@string/options"
+        >
 <menu>
 
             <item
