--- a/TbdModule/src/main/res/layout/fragment_room_settings.xml
+++ b/TbdModule/src/main/res/layout/fragment_room_settings.xml
@@ -13,7 +13,7 @@ Section RCB
     android:background="@drawable/splash_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.appcompat.widget.Toolbar
+    <!-- <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,6 +21,7 @@ Section RCB
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         android:layout_gravity="top"/>
+        -->
 
 
     <FrameLayout
