--- a/TbdModule/src/main/res/menu/drawer_menu.xml
+++ b/TbdModule/src/main/res/menu/drawer_menu.xml
@@ -2,20 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn = "navigation_view">
+
+    <group
+        android:checkableBehavior="single">
     <item
         android:id="@+id/nav_home"
         android:title="@string/building_a2"
         android:icon="@drawable/abuilding"/>
+
     <item
         android:id="@+id/nav_second"
         android:title="@string/building_b2"
         android:icon="@drawable/bbuilding"/>
+
     <item
         android:id="@+id/nav_third"
         android:title="@string/building_c2"
         android:icon="@drawable/cbuilding"/>
+
     <item
         android:id="@+id/nav_fourth"
         android:title="@string/building_d2"
         android:icon="@drawable/dbuilding"/>
+</group>
+
 </menu>
