--- a/TbdModule/src/main/res/menu/drawer_menu.xml
+++ b/TbdModule/src/main/res/menu/drawer_menu.xml
@@ -38,4 +38,17 @@
     </item>
     </group>
 
+    <group
+        android:checkableBehavior="single">
+        <item
+            android:title="Logout">
+            <menu>
+                <item
+                    android:id="@+id/nav_logout"
+                    android:icon="@drawable/logout_menu"
+                    android:title="Logout"/>
+            </menu>
+        </item>
+    </group>
+
 </menu>
